--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="STYLESHEET" type="TEXT/CSS" href="CSS/style.CSS" />
-    <link rel="STYLESHEET" type="TEXT/CSS" href="css/modal.css">
+    <link rel="STYLESHEET" type="TEXT/CSS" href="style.CSS" />
+    <link rel="STYLESHEET" type="TEXT/CSS" href="modal.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
